UPDATED USER FUNCTIONALITIES

--- a/html/user_dash.html
+++ b/html/user_dash.html
@@ -23,6 +23,9 @@
     <a href="p_r.html">RESET_PASSWORD</a><br>
     <a href="edit.html">EDIT PROFILE</a><br>
     <button  type="submit" name="btnSubmitd" id="btnSubmitd" >DELETE</button>
+
+
+    <a href="user_history.html">history</a><br>
     
 
     <script>
